<resources>
    <string name="app_name">Proekt1</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_button">Register</string>
    <string name="login_button">Log in</string>
    <string name="register">Register</string>
    <string name="vehicleModel">Model</string>
    <string name="vehicleYear">Year</string>
    <string name="vehicleColor">Color</string>
    <string name="vehicleRegistrationPlate">Registration Plate</string>
    <string name="availability">Availability</string>
    <string name="save">Save Vehicle</string>
</resources>
